# jwt-authentication-API

./: .gitignore  INSTRUCTION.md  Makefile  README.md  dev.env  docker-compose.yaml  manage.py  pyproject.toml
api/: main.py
api/core/: __init__.py  config.py  dependencies.py  security.py
api/database/: __init__.py  create.py  crudbase.py  db_connection.py  delete.py  read.py  update.py
api/endpoints/: __init__.py  forget.py  login.py  ping.py  signin.py  signout.py
api/schemas/: __init__.py  forget_password.py  token.py  user.py
docker/: Dockerfile
docs/source/: api.core.rst  api.database.rst  api.endpoints.rst  api.rst  api.schemas.rst  api.utils.rst  conf.py  index.rst  modules.rst
tests/: test_signin_login_logout.py
