[tool.poetry]
name = "authentication api"
version = "0.1.0"
description = "User athentication API based on Json Web Token and FastAPI framework."
authors = ["juliog922 <juliogalindo922@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
psycopg2 = "^2.9.9"
uvicorn = "^0.26.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-settings = "^2.1.0"
bcrypt = "4.0.1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
